# BrickGame

./: Makefile  brick_game.h
brick_game/snake/: controller.cc  controller.h  fsm.cc  fsm.h  model.cc  model.h
brick_game/tetris/: backend.c  backend.h  controller.cc  controller.h
dvi/: brickgame.texi
gui/cli/: cli_snake.cc  cli_tetris.c  frontend.c  frontend.h
gui/desktop/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h
tests/: fsm_tests.cc  publicmodel_tests.cc  snake_tests.cc  test_includes.h
